Fixed timer bleeding into the board

--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ body {
     color: green;
     position: relative;
     right: 50mm;
-    top: 30mm;
     font-size: 7mm;
 
 }
